Fix: Link field issue with overlaping, used custom range slider and remove overflow logic

--- a/frappe_enhanced_gridview/public/scss/enhanced_gridview.bundle.scss
+++ b/frappe_enhanced_gridview/public/scss/enhanced_gridview.bundle.scss
@@ -1,5 +1,17 @@
 .form-grid-container {
-    overflow-y: auto;
+    // overflow-y: auto;
+    border: 1px solid var(--table-border-color);
+    border-radius: var(--border-radius-md);
+    overflow-x: clip !important;
+
+    .form-grid {
+        border: none;
+        border-radius: unset;
+    }
+
+    .form-grid.relative-important {
+        position: relative !important;
+    }
 
     .grid-heading-row {
         height: auto;
@@ -9,15 +21,25 @@
     .grid-heading-row .row-check,
     .grid-heading-row .row-index {
         height: auto !important;
+        background-color: var(--subtle-fg);
     }
 
     .grid-row {
         .data-row.row {
             flex-wrap: nowrap;
+            // display: grid;
+            // grid-auto-flow: column;
 
             .col {
                 max-width: 200px !important;
                 min-width: 200px !important;
+                border-bottom: 1px solid var(--table-border-color);
+                padding-bottom: 1px;
+
+                .field-area {
+                    border-bottom: 1px solid var(--table-border-color);
+
+                }
             }
 
             // .col.custom-2 {
@@ -70,7 +92,8 @@
 
             .row-check,
             .row-index {
-                max-width: 30px !important;
+                max-width: 50px !important;
+                min-width: 50px !important;
             }
 
             .static-area.ellipsis {
@@ -78,5 +101,40 @@
                 white-space: normal;
             }
         }
+    }
+
+    .slidecontainer {
+        width: 100%;
+    }
+
+    .enhanced-slider {
+        -webkit-appearance: none;
+        width: 100%;
+        height: 8px;
+        background: #d3d3d3;
+        outline: none;
+        opacity: 0.7;
+        -webkit-transition: .2s;
+        transition: opacity .2s;
+    }
+
+    .enhanced-slider:hover {
+        opacity: 1;
+    }
+
+    .enhanced-slider::-webkit-slider-thumb {
+        -webkit-appearance: none;
+        appearance: none;
+        width: 50%;
+        height: 8px;
+        background: #04AA6D;
+        cursor: pointer;
+    }
+
+    .enhanced-slider::-moz-range-thumb {
+        width: 200px;
+        height: 8px;
+        background: #04AA6D;
+        cursor: pointer;
     }
 }
